argocd/manifests/gateway/xray-routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: xray-tcp
  namespace: xray
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: gateway
      sectionName: xray-tcp
  rules:
    - backendRefs:
        - name: xray
          port: 10000
